k8s/web/scrolller-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scrolller-web-deployment
  namespace: scrolller
  labels:
    app: scrolller-web
spec:
  selector:
    matchLabels:
      app: scrolller-web
  template:
    metadata:
      labels:
        app: scrolller-web
    spec:
      containers:
        - name: scrolller-web-container
          image: localhost:32000/scrolller-web:v1
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "100m"
          ports:
            - containerPort: 80
