k8s/web/scrolller-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scrolller-web-service
  namespace: scrolller
  labels:
    app: scrolller-web
spec:
  type: LoadBalancer
  selector:
    app: scrolller-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
